Petal Listing and Data overhaul

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             cursor: default;
         } */
     </style>
+    <script src="init.js"></script>
     <script src="flower.js"></script>
+    <script src="raritydata.js"></script>
     <script src="petalcontainer.js"></script>
     <script src="petaldata.js"></script>
     <script src="game.js"></script>
-    <script src="render.js"></script>
 </html>
