FINALLY FIXED PETAL SPACING LETS GOOOOOOOO

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <script src="init.js"></script>
     <script src="flower.js"></script>
-    <script src="raritydata.js"></script>
+    <script src="raritydefinitions.js"></script>
     <script src="petalcontainer.js"></script>
     <script src="petaldata.js"></script>
     <script src="game.js"></script>
