Added controls and fixed that pesky bug

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         } */
     </style>
     <script src="init.js"></script>
+    <script src="controls.js"></script>
     <script src="flower.js"></script>
     <script src="raritydefinitions.js"></script>
     <script src="petalcontainer.js"></script>
