added Light (type: 2)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script src="controls.js"></script>
     <script src="flower.js"></script>
     <script src="raritydefinitions.js"></script>
-    <script src="petalcontainer.js"></script>
     <script src="petaldata.js"></script>
+    <script src="petalcontainer.js"></script>
     <script src="game.js"></script>
+    <script src="mobdata.js"></script>
 </html>
