--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="raritydefinitions.js"></script>
     <script src="petaldata.js"></script>
     <script src="petalcontainer.js"></script>
-    <script src="game.js"></script>
     <script src="mobdata.js"></script>
+    <script src="rendermob.js"></script>
+    <script src="updatemob.js"></script>
+    <script src="game.js"></script>
 </html>
