--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <div id="center">
             <b><h1 style="font-family: Ubuntu; color:white; font-size: 50px">Loading...</h1></b>
         </div>
+        <div id="disconnect">
+            <b><h1 style="font-family: Ubuntu; color:red; font-size: 50px">Disconnected</h1></b>
+        </div>
         <canvas id="ctx"></canvas>
     </body>
     <style>
@@ -34,6 +37,22 @@
             height: 0px;
         }
         #center h1 {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        #disconnect {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100px;
+            height: 100px;
+            background-color: black;
+        }
+        #disconnect h1 {
             margin: 0;
             position: absolute;
             top: 50%;
